--- a/relatorio/Netuno/Relatorio.tex
+++ b/relatorio/Netuno/Relatorio.tex
@@ -95,7 +95,7 @@ Total & 4298 & 5465 & 4018 \\
 
 
 
-Fig. \ref{Fig:pos-dist} shows the distribution of positions where Neptune and Triton are identified in the same image (short-exposure observations) over the years. Figs \ref{Fig:filtro-160}-\ref{Fig:filtro-IAG} summarizes the distribution of positions with Neptune and Triton in the same image by filter obtained in the \PE , and \BC telescopes, respectively. Zeiss only has images observed in Clear and I filters.
+Fig. \ref{Fig:pos-dist} shows the distribution of positions where Neptune and Triton are identified in the same image (short-exposure observations) over the years. Figs \ref{Fig:filtro-160}-\ref{Fig:filtro-IAG} summarizes the distribution of positions with Neptune and Triton in the same image by filter obtained in the \PE and \BC telescopes, respectively. Zeiss only has images observed in Clear and I filters.
 
 \begin{figure}
 \includegraphics[width=16.0cm]{pos-distribution.png} 
