--- a/relatorio/Netuno/Relatorio.tex
+++ b/relatorio/Netuno/Relatorio.tex
@@ -276,7 +276,7 @@ Object & U-B & B-V & V-R & R-I & V-I\\
 \hline
 Triton (leading side) & & +0.696$\pm$0.009 & & & +0.766$\pm$0.006 \\
 Triton (trailing side) & & +0.699$\pm$0.006 & & & +0.776$\pm$0.007 \\
-Neptune & +0.14 & +0.39 & -0.29 & -1.05 & +0.76*\\
+Neptune & +0.14 & +0.39 & -0.29 & -1.05 & -1.34*\\
 \hline
 \end{tabular}
 \caption{Colors of Triton and Neptune. Leading side is the hemisphere of Triton that is in the direction of its movement. Trailing side is the opposite hemisphere. \\ *calculated from V-R and R-I colors.}
