--- a/relatorio/Netuno/Relatorio.tex
+++ b/relatorio/Netuno/Relatorio.tex
@@ -82,16 +82,16 @@ In Table \ref{Tab:dados} it is summarized the final number of images for Neptune
 Telescope & Neptune & Triton & Matches \\ 
 \hline
 %160 & 782 & 1341 & 768 \\ 
-160 & 735 & 1275 & 705 \\
+160 & 735 & 1251 & 682 \\
 \hline
 %IAG & 3162 & 3645 & 2909 \\
-IAG & 2894 & 3341 & 2538 \\ 
+IAG & 2795 & 3341 & 2459 \\ 
 \hline 
 %Zeiss & 354 & 479 & 341 \\
-Zeiss & 325 & 463 & 312 \\ 
+Zeiss & 292 & 463 & 280 \\ 
 \hline 
 %Total & 4298 & 5465 & 4018 \\
-Total & 3954 & 5079 & 3555 \\ 
+Total & 3822 & 5055 & 3421 \\ 
 \hline 
 \end{tabular}
 \\Number of positions identified of Neptune and Triton by telescope. Matches: Number of positions where Neptune and Triton were identified automatically in the same image. This is the final number after all the process described in this report.
@@ -125,12 +125,12 @@ Fig. \ref{Fig:pos-dist} shows the distribution of positions where Neptune and Tr
 
 \section*{Reduction}
 
-The images were reduced using PRAIA, developed by Marcelo Assafin. To avoid the missing or wrong coordinates I used the coordinates of the ephemeris as input. This way PRAIA could identify reference stars in the images. The reference catalogue used was UCAC4. The ephemeris used to identify Neptune and Triton in the images was DE430+NEP081. The positions where the image of Neptune were saturated and where there were less than 5 reference stars were removed of the results.
+The images were reduced using PRAIA, developed by Marcelo Assafin. To avoid the missing or wrong field-center coordinates I used the coordinates of the ephemeris as input. This way PRAIA could identify reference stars in the images. The reference catalogue used was UCAC4. The ephemeris used to identify Neptune and Triton in the images was DE430+NEP081. The positions where the image of Neptune were saturated and where there were less than 5 reference stars were removed of the results.
 
 In Table 2 it is presented the mean errors in X and Y of the bidimensional Gaussian used to fit the PSF of the objects and the mean value of the dispersion of the offsets by night.
 
 \begin{longtable}{|l|c|c|c|c|}
-\caption{Table of erros of the reduction. Gaussian error stands for the error in X and Y of the bidimensional Gaussian used to fit the PSF. Mean offset errors is the average dispersion of the positions of each night.}\\
+\caption{Table of errors of the reduction. Gaussian error stands for the error in X and Y of the bidimensional Gaussian PSF used in the (x,y) fits. Mean offset errors is the average dispersion of the positions of each night.}\\
 \hline
 Telescope/Satellite &  \multicolumn{2}{|c|}{Gaussian error} &   \multicolumn{2}{|c|}{Mean offet errors} \\
 %\hline
@@ -156,7 +156,7 @@ Zeiss/Triton & 25$\pm$13 & 25$\pm$13 & 40 & 51 \\
 \hline
 \end{longtable}
 
-We applied the digital coronagraphy technique to test if the scattered light of Neptune would influence in the Triton's photocenter. No influence was identified in the 1 mas range.
+We applied the digital coronagraphy technique to test if the scattered light of Neptune would influence in the Triton's photocenter. We found no variations larger than 1 mas. We thus concluded that we do not need digital coronagraphy to improve the positions, as was the case of Uranus and its satellite Miranda..
 
 %From the offsets in the sense "position minus ephemeris" identified I made statistics night by night to eliminate discrepant positions with a sigma-clip procedure where offsets (modulus) larger than 80 mas or 2-sigma discrepant from the mean offset were removed. This procedure was applied for each set of observations (short exposures and long exposures) separately.
 
@@ -270,7 +270,7 @@ We applied the digital coronagraphy technique to test if the scattered light of 
 
 \section*{Chromatic Refraction Test}
 
-Table \ref{Tab:colors} shows the colors for Triton \citep{Pascu2006} and Neptune \cite{Schmude2016}. Their colors are very different in the blue region. So it is expected that their positions have influence of chromatic refraction (CR) with different intensities. The apparent position of Neptune, which is more blue than Triton, would be more shifted towards the zenith than the Triton's position. There may also be noted that in 1992 Neptune had just exited the galactic plane, so the reference stars were redder due to dust.
+Table \ref{Tab:colors} shows the colors for Triton \citep{Pascu2006} and Neptune \cite{Schmude2016}. Their colors are very different. Neptune is much bluer than Triton. So it is expected that their positions have influence of chromatic refraction (CR) with different intensities with respect to the reference stars. The apparent position of Neptune, which is more blue than Triton, would be more shifted towards the zenith than the Triton's position. There may also be noted that in 1992 Neptune had just exited the galactic plane, so the reference stars were redder due to dust.
 
 \begin{table*}[h]
 \centering
@@ -322,16 +322,16 @@ The model is applied to the offsets in $\alpha$ and the chromatic parameter $\De
 
 Fig. \ref{Fig:refraction-sample-neptune} shows the offsets for a sample night observed with the Perkin-Elmer telescope. In blue are the offsets before the correction and in green after correction. It is possible to see the increase in the offsets before the correction over time (blue).
 
-For the nights with observations distributed in a smaller time interval, the correction was made following the conditions:
+For the nights with observations distributed in a smaller hour angle, the correction was made following the conditions:
 
 \begin{itemize}
-\item If the night only has observations between -1h and 1h of hourangle, no correction is made.
+\item If the night only has observations between -1h and 1h of hour angle, no correction is made.
 \item If there is another night with $\Delta B$ calculated observed with the same filter and same telescope within at most 3 days apart, the $\Delta B$ from that night is used in the CR correction.
 \item If there is no close night with $\Delta B$ calculated, it is used the mean $\Delta B$ calculated for nights observed with the same filter and same telescope for the correction of CR.
 \item Other situations, no CR correction is made.
 \end{itemize}
 
-Figs. \ref{Fig:refraction-net-160}-\ref{Fig:refraction-tri-iag} show the distributions of the offsets in RA and DEC before and after the elimination of chromatic refraction (Neptune-160, Triton-160, Neptune-IAG, Triton-IAG, respectively) for all the nights. The histograms clearly show an improvement in the distribution of the offsets, mainly for Neptune. So chromatic refraction is very important and must be removed. % looked for nights with many observations distributed over the night. I selected five of them (\PE: 1997-05-31 and 1997-06-01; \BC: 2003-07-27, 2004-08-22 and 2011-09-25) with more than 4 hours between the first and last observations. In the nights of \PE and in the 2003 night of \BC it was used no filter (clear). In the night of 2004 it was used a filter called "Dark" which we suppose it means no filter, however we are no sure so I classified it as unknown. In the night of 2011 it was used a I filter.% In both nights there was only one exposure time used.
+Figs. \ref{Fig:refraction-net-160}-\ref{Fig:refraction-tri-iag} show the distributions of the offsets in RA and DEC before and after the elimination of chromatic refraction (Neptune-160, Triton-160, Neptune-IAG, Triton-IAG, respectively) for all the nights. Significant improvements were only achieved in right ascension. That was expected, since between 1992-2016 Neptune/Triton were always observed with declinations very close to the OPD's zenith ($\delta = -21$\degr in 1992 up to $\delta = -9$\degr in 2015, OPD: $\phi = -22.5$\degr). We see a marginal improvement for Triton, as also expected since its red color is not far from the average color of the reference stars. And we see a significant improvement for Neptune positions, also expected because of its much bluer color. % looked for nights with many observations distributed over the night. I selected five of them (\PE: 1997-05-31 and 1997-06-01; \BC: 2003-07-27, 2004-08-22 and 2011-09-25) with more than 4 hours between the first and last observations. In the nights of \PE and in the 2003 night of \BC it was used no filter (clear). In the night of 2004 it was used a filter called "Dark" which we suppose it means no filter, however we are no sure so I classified it as unknown. In the night of 2011 it was used a I filter.% In both nights there was only one exposure time used.
 
 %In Fig \ref{Fig:refraction} it is plotted the difference in the positions of Triton and Neptune compared to the difference of their ephemeris in RA and DEC for the 5 nights.
 
@@ -607,24 +607,26 @@ Date & Filter & $\Delta H$ & $\Delta B$ & Nimg & Nstars & RA no corr & DEC no co
 %
 %This test was made using the Scipy packages: Odrpack (for non-linear least square fit) and Special (for the error function). It is possible to see that the function for extended objects (green) fits better the profile of Neptune.
 
-\section*{Final Remarks}
+\section*{Results}
 
 Finally, from the offsets in the sense "position minus ephemeris" identified it was made statistics night by night to eliminate discrepant positions with a sigma-clip procedure where offsets (modulus) larger than 80 mas or 2.5-sigma discrepant from the mean offset were removed.% This procedure was applied for each set of observations (short exposures and long exposures) separately.
 
 Fig \ref{Fig:netuno-media} shows the mean offsets of each night and respective discrepancy (error bars) for Neptune in RA and DEC, respectively.
 
-Fig \ref{Fig:triton-netuno-mean} shows the difference in the mean offsets night by night for all matched nights and not eliminated by the sigma-clip procedure in the sense Triton - Neptune. The error bars are the mean value of the dispersions in the night for each satellite.
+%Fig \ref{Fig:triton-netuno-mean} shows the difference in the mean offsets night by night for all matched nights and not eliminated by the sigma-clip procedure in the sense Triton - Neptune. The error bars are the mean value of the dispersions in the night for each satellite.
 
 %The large offsets found in 2002-2003 must be checked. It may be caused by few reference stars in the field or saturation.\\
 
 
-It seems that there are long term systematic errors in the orbit of Neptune, and in the orbit of Triton around Neptune, but it is too soon to state that with confidence. We must still further refine the positions. We plan to do the following:
+%It seems that there are long term systematic errors in the orbit of Neptune, and in the orbit of Triton around Neptune, but it is too soon to state that with confidence. We must still further refine the positions.
+%We still plan to do the following:
+Fig. \ref{Fig:triton-netuno-anom} shows the difference between the offsets of Triton and Neptune over True Anomaly. %Figs. \ref{Fig:triton-netuno-1992}- \ref{Fig:triton-netuno-2013} shows the same divided by an interval of 3 years.
 
-\begin{itemize}
-\item Test the PSF for Neptune to identify the best way to reduce all images.
-\item Utilize an astrometry which uses the same stars in all fields of a night to have a cleaner reduction to eliminate chromatic refraction.
-\item Further refinements in the data may be needed as we further investigate these position sets.
-\end{itemize}
+%\begin{itemize}
+%\item Test the PSF for Neptune to identify the best way to reduce all images.
+%\item Utilize an astrometry which uses the same stars in all fields of a night to have a cleaner reduction to eliminate chromatic refraction.
+%\item Further refinements in the data may be needed as we further investigate these position sets.
+%\end{itemize}
 
 %In Tables 2 and 3 it is shown the mean offsets in Right Ascension and Declination night by night for Neptune and Triton, respectively, observed in the \PE telescope. The dispersion of the positions (standard deviation), number of frames that was not eliminated by the sigma-clip procedure, the mean date of the night and the average number of reference stars by frame is also available in the tables. The respective mean offsets night by night for the \BC telescope is available in Tables 4 and 5. As for the previous telescopes, tables 6 and 7 summarizes the offsets obtained with the Zeiss telescope.
 
@@ -636,9 +638,9 @@ It seems that there are long term systematic errors in the orbit of Neptune, and
 %\caption{Neptune - All Offsets}
 %\label{Fig:netuno-all}
 %\end{figure}
-\begin{figure}
+\begin{figure}[H]
 \includegraphics[width=15.0cm]{Neptune_offsets.png} 
-\caption{Neptune - Mean offsets by day}
+\caption{Neptune - Mean offsets by night}
 \label{Fig:netuno-media}
 \end{figure}
 %\begin{figure}
@@ -656,60 +658,76 @@ It seems that there are long term systematic errors in the orbit of Neptune, and
 %\caption{Difference between the offsets of Triton and Neptune - All %data}
 %\label{Fig:triton-netuno-all}
 %\end{figure}
-\begin{figure}
-\includegraphics[width=15.0cm]{Triton-Neptune.png} 
-\caption{Difference between the offsets of Triton and Neptune - Mean offset by day}
-\label{Fig:triton-netuno-mean}
-\end{figure}
+%\begin{figure}
+%\includegraphics[width=15.0cm]{Triton-Neptune.png} 
+%\caption{Difference between the offsets of Triton and Neptune - Mean offset by day}
+%\label{Fig:triton-netuno-mean}
+%\end{figure}
 
-Fig. \ref{Fig:triton-netuno-anom} shows the difference between the offsets of Triton and Neptune over True Anomaly. Figs. \ref{Fig:triton-netuno-1992}- \ref{Fig:triton-netuno-2013} shows the same divided by an interval of 3 years.
 
-\begin{figure}
+\begin{figure}[H]
 \includegraphics[width=14.0cm]{Anom_TN.png} 
 \caption{Difference between the offsets of Triton and Neptune by True Anomaly}
 \label{Fig:triton-netuno-anom}
 \end{figure}
 
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_1992-1995.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1992.0 -> 1995.0}
-\label{Fig:triton-netuno-1992}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_1995-1998.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1995.0 -> 1998.0}
-\label{Fig:triton-netuno-1995}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_1998-2001.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1998.0 -> 2001.0}
-\label{Fig:triton-netuno-1998}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_2001-2004.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2001.0 -> 2004.0}
-\label{Fig:triton-netuno-2001}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_2004-2007.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2004.0 -> 2007.0}
-\label{Fig:triton-netuno-2004}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_2007-2010.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2007.0 -> 2010.0}
-\label{Fig:triton-netuno-2007}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_2010-2013.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2010.0 -> 2013.0}
-\label{Fig:triton-netuno-2010}
-\end{figure}
-\begin{figure}
-\includegraphics[width=14.0cm]{Anom_TN_2013-2016.png} 
-\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2013.0 -> 2016.0}
-\label{Fig:triton-netuno-2013}
-\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_1992-1995.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1992.0 -> 1995.0}
+%\label{Fig:triton-netuno-1992}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_1995-1998.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1995.0 -> 1998.0}
+%\label{Fig:triton-netuno-1995}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_1998-2001.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1998.0 -> 2001.0}
+%\label{Fig:triton-netuno-1998}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_2001-2004.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2001.0 -> 2004.0}
+%\label{Fig:triton-netuno-2001}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_2004-2007.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2004.0 -> 2007.0}
+%\label{Fig:triton-netuno-2004}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_2007-2010.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2007.0 -> 2010.0}
+%\label{Fig:triton-netuno-2007}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_2010-2013.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2010.0 -> 2013.0}
+%\label{Fig:triton-netuno-2010}
+%\end{figure}
+%\begin{figure}
+%\includegraphics[width=14.0cm]{Anom_TN_2013-2016.png} 
+%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2013.0 -> 2016.0}
+%\label{Fig:triton-netuno-2013}
+%\end{figure}
+
+\section*{Final tests}
+
+In order to consolidate the position data sets of Neptune and Triton prior to publication, we have two tests yet to perform.
+
+
+a) Numerical PSF for Neptune
+
+Roberto Vieira Martins developed a numerical PSF for a circular extended object, based on the spread of a Gaussian PSF kernel over the apparent planet's disk. I've already implemented this numerical PSF. I am testing it in a group of observations with negligible solar phase angle. The idea is to compare the results using this numerical PSF and the 2D Gaussian PSF, which was used in all observations. If no significant improvements are achieved, we will stand with the 2D Gaussian PSF. This may be the case, as we are dealing with high S/N ratio images (Neptune) and PRAIA discards wing pixels in the (x,y) fits, so that in the end both PSFs may perform equally well.
+
+
+b) Uniform reduction and global reduction
+
+We will make tests on selected nights, using rigorously the same reference stars in the (RA,Dec) reduction of each individual field of that night (uniform reduction), or using the global reduction technique with the same underlying objective, in order to see if we get a better chromatic refraction correction.
+
+
+If we do not find any position improvements in tests (a) and (b), then the current sets of positions will be the final ones. If improvements can be made from the tests, then we will apply the procedures in the reductions in order to have the final sets of positions. 
 
 
 \bibliography{references}
